Avoid scrollbars in event dialog due to long URLs (#3480)

--- a/plugins/calendar/skins/classic/calendar.css
+++ b/plugins/calendar/skins/classic/calendar.css
@@ -460,6 +460,12 @@ a.miniColors-trigger {
 	margin-bottom: 0.3em;
 }
 
+#eventshow #event-url .event-text {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
 #eventedit {
 	position: relative;
 	padding: 0.5em 0.1em;
